--- a/profiles.html
+++ b/profiles.html
@@ -337,7 +337,7 @@
                     <div class="column" id="nicename">
                         <div class="row">
                             <div class="cell left">
-                                <label for="displayName">displayname</label><span class="red">*</span>:
+                                <label for="displayName">displayName</label><span class="red">*</span>:
                             </div>
                             <div class="cell right">
                                 <input id="displayName" name="displayName" type="text">
