[GUI] add link to API doc

--- a/profiles.html
+++ b/profiles.html
@@ -291,7 +291,11 @@
 
 <body>
     <h1>Matrix Webhook Receiver</h1>
-    <a href="https://github.com/HarHarLinks/matrix-webhook-receiver">Documentation and source</a>
+    <p>
+        <a href="https://github.com/HarHarLinks/matrix-webhook-receiver">Documentation and source</a>
+        <br>
+        <a href="./docs">API Documentation</a>
+    </p>
     <div class="container">
         <div class="element" id="profile-list">
             <h2>Current Profiles</h2>
