[GUI] write functions readable

--- a/profiles.html
+++ b/profiles.html
@@ -89,7 +89,11 @@
                 dataType: 'json',
                 data: JSON.stringify(p),
                 contentType: 'application/json; charset=utf-8',
-                success: function (result){console.log(result); getProfiles(); editProfile(result.whid)},
+                success: function (result){
+                    console.log(result)
+                    getProfiles()
+                    editProfile(result.whid)
+                },
                 error: function (jqXhr, status, error){
                     console.log(jqXhr)
                     console.log(status)
