--- a/profiles.html
+++ b/profiles.html
@@ -46,18 +46,18 @@
                 $('#defaultFormat').val(result.defaultFormat)
             } else {
                 $('#defaultFormat').val('custom')
-                $('#customFormat').val(result.defaultFormat)
+                $('#customFormat').val(result.defaultFormat).trigger('input')
             }
             $('#defaultFormat').change()
             if (result.defaultMsgtype === 'text' || result.defaultMsgtype === 'notice' || result.defaultMsgtype === 'emote') {
                 $('#defaultMsgtype').val(result.defaultMsgtype)
             } else {
                 $('#defaultMsgtype').val('custom')
-                $('#customMsgtype').val(result.defaultMsgtype)
+                $('#customMsgtype').val(result.defaultMsgtype).trigger('input')
             }
             $('#defaultMsgtype').change()
             $('#defaultEmoji').prop('checked', result.defaultEmoji)
-            $('#template').val(result.template)
+            $('#template').val(result.template).trigger('input')
             if (result.template != '' && result.template != null) {
                 previewTemplate()
             }
@@ -189,21 +189,26 @@
             $('#avatar-preview').attr('src', '')
             $('#defaultFormat').val('plain')
             $('#defaultFormat').change()
-            $('#customFormat').val('')
+            $('#customFormat').val('').trigger('input')
             $('#defaultMsgtype').val('text')
             $('#defaultMsgtype').change()
-            $('#customMsgtype').val('')
+            $('#customMsgtype').val('').trigger('input')
             $('#defaultEmoji').prop('checked', true)
-            $('#template').val('')
+            $('#template').val('').trigger('input')
             $('#preview-area').html('(click "refresh HTML preview" to preview here)')
             $('#webhook-info').html('Load or save a profile to show the respective Webhook URL here.')
         }
         function combo(textinput, value) {
             if (value === 'custom') {
                 textinput.css('display', 'inline-block')
+                autoGrow(textinput)
             } else {
                 textinput.css('display', 'none')
             }
+        }
+        function autoGrow(element) {
+            element.css('height', 'auto')
+            element.css('height', (element.prop('scrollHeight'))+'px')
         }
         $(document).ready(function(){
             clearProfile()
@@ -318,6 +323,11 @@
         #customFormat,#customMsgtype {
             display: none;
         }
+        textarea {
+            width: calc(100% - 6px);
+            resize: vertical;
+            overflow: hidden;
+        }
         #update-preview {
             width: auto;
             margin-left: 10px;
@@ -331,10 +341,7 @@
             align-self: flex-end;
         }
         #template {
-            max-width: 100%;
-            width: calc(100% - 6px);
             min-height: 10em;
-            height: fit-content;
         }
         #template-row .cell {
             width: inherit;
@@ -450,7 +457,7 @@
                                     <option value="html">HTML</option>
                                     <option value="custom">Custom Jinja2 template</option>
                                 </select>
-                                <input id="customFormat" name="customFormat" type="text">
+                                <textarea id="customFormat" name="customFormat" oninput="autoGrow($('#customFormat'))" style="height: auto;"></textarea>
                             </div>
                         </div>
                         <div class="row">
@@ -464,7 +471,7 @@
                                     <option value="emote">Emote</option>
                                     <option value="custom">Custom Jinja2 template</option>
                                 </select>
-                                <input id="customMsgtype" name="customMsgtype" type="text">
+                                <textarea id="customMsgtype" name="customMsgtype" oninput="autoGrow($('#customMsgtype'))" style="height: auto;"></textarea>
                             </div>
                         </div>
                         <div class="row">
@@ -479,7 +486,7 @@
                     <div class="row" id="template-row">
                         <div class="cell">
                             <label for="template">template</label>:<br>
-                            <textarea id="template" name="template"></textarea>
+                            <textarea id="template" name="template" oninput="autoGrow($('#template'))" style="height: auto;"></textarea>
                             <div id="preview-container">
                                 <input id="preview" type="button" value="refresh HTML preview" onclick="previewTemplate()">
                                 <span>The template HTML gets cleaned with <a href="https://github.com/cure53/DOMPurify">DOMPurify</a>.</span>
