--- a/profiles.html
+++ b/profiles.html
@@ -15,6 +15,7 @@
             })
         }
         function loadProfiles(result) {
+            console.log('loading profiles')
             console.log(result)
             profiles = $('#profiles')
             profiles.attr('size', result.length)
@@ -34,6 +35,7 @@
             getProfiles()
         }
         function loadProfile(result) {
+            console.log('loading profile')
             console.log(result)
             clearProfile()
             $('#whid').val(result.whid)
@@ -66,7 +68,7 @@
             $('#webhook-url').html(location.substr(0, location.length - 'profiles'.length) + result.whid)
         }
         function editProfile(whid) {
-            console.log(whid)
+            console.log('downloading profile ' + whid)
             $.ajax({
                 type: 'GET',
                 url: 'profile/' + whid,
@@ -75,7 +77,7 @@
             })
         }
         function saveProfile() {
-            console.log($('#whid').val())
+            console.log('saving profile ' + $('#whid').val())
             var avatar = $('#avatar').val()
             if (avatar == '') {
                 avatar = null
@@ -137,7 +139,7 @@
             $('#preview-area').html(clean)
         }
         function testProfile(whid) {
-            console.log(whid)
+            console.log('sending test message to profile ' + whid)
             $.ajax({
                 type: 'GET',
                 url: 'profile/' + whid,
@@ -169,7 +171,7 @@
             })
         }
         function deleteProfile(whid, description) {
-            console.log(whid)
+            console.log('deleting profile' + whid)
             var c = confirm('Do you really want to delete "' + description + '"?')
             if (c == true) {
                 $.ajax({
